# PythonRepoTemplate

./: README.md  SECURITY.md  pyproject.toml
.github/workflows/: build.yml  release.yml  update_README.yml
docs/: conf.py  index.rst
scripts/: run_tests.sh
